--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,6 @@ body {
 .stats-templates,
 .stats-queries {
   text-align: center;
-  text-transform: uppercase;
 }
 
 .stats-content h2 {
@@ -113,6 +112,8 @@ body {
 .stats-content p {
   color: var(--clr-statheadings-transwhite);
   font-size: 0.7rem;
+  text-transform: uppercase;
+
   letter-spacing: 1.5px;
 }
 
@@ -122,6 +123,79 @@ body {
 
 .stats-queries {
   margin-bottom: 35px;
+}
+
+@media (min-width: 975px) {
+  /* body {
+    background-color: green;
+  } */
+
+  .main-container {
+    flex-direction: row-reverse;
+    max-width: 1000px;
+  }
+
+  .main-image {
+    width: 100%;
+  }
+
+  .main-image img {
+    /* max-height: 100%; */
+    border-top-left-radius: 0px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    display: block;
+  }
+
+  .main-image::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: var(--clr-accent-softviolet);
+    opacity: 0.5;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+
+  .main-content {
+    text-align: left;
+    margin-left: 67px;
+    margin-top: 50px;
+  }
+
+  .main-content p {
+    margin-left: 0;
+    margin-right: 35px;
+    margin-bottom: 60px;
+    font-size: 0.8rem;
+    line-height: 1.3rem;
+  }
+
+  .stats-companies,
+  .stats-templates,
+  .stats-queries {
+    margin: 0;
+    text-align: left;
+  }
+
+  .stats-content {
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 35px;
+    margin-bottom: 50px;
+  }
+
+  .stats-content h2 {
+    font-size: 1.2rem;
+  }
+
+  .stats-content p {
+    font-size: 0.7rem;
+  }
 }
 
 .attribution {
